# gpt2tiny

./: .gitignore  README.md  Untitled.ipynb  dashboard.py  data_training.ipynb  dataset.py  generate_prompts.py  gpt2_pretraining.ipynb  gpt2_rl_grpo.ipynb  gpt2_supervised_finetuning.ipynb  gpt2_training.ipynb  model.py  preprocess.py  pretrain.py  pyproject.toml  requirements.txt  reward.py  run_pretrain.sh  run_train_grpo_hf.sh  run_train_sft_hf.sh  start_mlflow_server.sh  train.py  train2.py  train3.py  train4.py  train_grpo_hf.py  train_sft_hf.py
assets/: adjectives.json  features.json  nouns.json  subject_actions.json  subject_adjectives.json  subject_characters.json  subject_goals.json  subject_places.json  verbs.json
docs/: CODEBASE.md  README.md
generation/: build_prompts.py  build_validation.py  generate_prompts.py  parse_results.py  run_parser.sh  run_prompt_build.sh  run_validation_build.sh
generation/batch_data/00/: failed00.json  summary00.json
generation/batch_data/01/: failed01.json  summary01.json
generation/batch_data/02/: failed02.json  summary02.json
gpt2tiny/: callbacks.py  dataset.py  model.py  prompter.py  reward.py  reward_v2.py  tokenizer.py  trainer.py  utils.py
gpt2tiny/rewards/: embedding.py  heuristic.py
